aligned the file name and "CodeGraph" correctly in the footer

--- a/style/style.css
+++ b/style/style.css
@@ -108,12 +108,15 @@ svg {
     font-weight: 900;
     font-size: 57px;
     color: rgba(0, 0, 0, 0.37);
-    width: 363px;
+    width: 50%;
     padding: 10px 17px;
+    text-align: right;
 }
 .signature.s-left {
     font-weight: 900;
     font-size: 44px;
     color: rgba(0, 0, 0, 0.37);
     padding: 17px 30px;
+    width: 50%;
+    text-align: left;
 }
